Added game logic.

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="assets/media/site-icon.ico">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js" defer></script>
     <script src="assets/js/script.js" defer></script>
     <title>WebDev | TicTacToe</title>
 </head>
@@ -15,15 +16,15 @@
         <section class="section-dashboard"></section>
         <section class="section-game-board">
             <div class="div-game-board">
+                <div class="div-game-square" data-row="0" data-col="0"></div>
+                <div class="div-game-square" data-row="0" data-col="1"></div>
+                <div class="div-game-square" data-row="0" data-col="2"></div>
+                <div class="div-game-square" data-row="1" data-col="0"></div>
                 <div class="div-game-square" data-row="1" data-col="1"></div>
                 <div class="div-game-square" data-row="1" data-col="2"></div>
-                <div class="div-game-square" data-row="1" data-col="3"></div>
+                <div class="div-game-square" data-row="2" data-col="0"></div>
                 <div class="div-game-square" data-row="2" data-col="1"></div>
                 <div class="div-game-square" data-row="2" data-col="2"></div>
-                <div class="div-game-square" data-row="2" data-col="3"></div>
-                <div class="div-game-square" data-row="3" data-col="1"></div>
-                <div class="div-game-square" data-row="3" data-col="2"></div>
-                <div class="div-game-square" data-row="3" data-col="3"></div>
             </div>
         </section>
     </main>
