Updated site visuals.

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -12,19 +12,27 @@
 </head>
 
 <body>
-    <main class="main-cointainer">
-        <section class="section-dashboard"></section>
+    <main class="main-container">
+        <section class="section-dashboard">
+            <h1>Welcome to TicTacToe!</h1>
+        </section>
         <section class="section-game-board">
-            <div class="div-game-board">
-                <div class="div-game-square" data-row="0" data-col="0"></div>
-                <div class="div-game-square" data-row="0" data-col="1"></div>
-                <div class="div-game-square" data-row="0" data-col="2"></div>
-                <div class="div-game-square" data-row="1" data-col="0"></div>
-                <div class="div-game-square" data-row="1" data-col="1"></div>
-                <div class="div-game-square" data-row="1" data-col="2"></div>
-                <div class="div-game-square" data-row="2" data-col="0"></div>
-                <div class="div-game-square" data-row="2" data-col="1"></div>
-                <div class="div-game-square" data-row="2" data-col="2"></div>
+            <div class="div-game-board-container">
+                <header class="game-board-header">
+                    <p>Current Move:</p>
+                    <span class="span-current-move">X</span>
+                </header>
+                <div class="div-game-board">
+                    <div class="div-game-square" data-row="0" data-col="0"></div>
+                    <div class="div-game-square" data-row="0" data-col="1"></div>
+                    <div class="div-game-square" data-row="0" data-col="2"></div>
+                    <div class="div-game-square" data-row="1" data-col="0"></div>
+                    <div class="div-game-square" data-row="1" data-col="1"></div>
+                    <div class="div-game-square" data-row="1" data-col="2"></div>
+                    <div class="div-game-square" data-row="2" data-col="0"></div>
+                    <div class="div-game-square" data-row="2" data-col="1"></div>
+                    <div class="div-game-square" data-row="2" data-col="2"></div>
+                </div>
             </div>
         </section>
     </main>
