Updated game logic.

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="div-confirmation-popup hide-up">
         <div class="div-confirmation-popup-content">
-            <h2>Player <ion-icon name="close"></ion-icon> Wins!</h2>
+            <h2>Player <ion-icon class="icon-confirmation" name="close-outline"></ion-icon> Wins!</h2>
             <button class="btn-new-game">New Game</button>
         </div>
     </div>
