Updated site visuals.

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -19,6 +19,16 @@
         </div>
     </div>
 
+    <!-- TODO: Alter game history. -->
+    <div class="div-game-history-popup hide-up">
+        <div class="div-game-history-container">
+            <h3>Game History</h3>
+            <ul class="score-history-list">
+                <!-- DYNAMICALLY GENERATED -->
+            </ul>
+        </div>
+    </div>
+
     <div class="div-popup-overlay hide-down">&nbsp;</div>
 
     <main class="main-container">
@@ -44,12 +54,6 @@
                         <ion-icon name="radio-button-off-outline"></ion-icon>
                     </div>
                 </div>
-                <div class="div-game-history-container">
-                    <h3>Game History</h3>
-                    <ul class="score-history-list">
-                        <!-- DYNAMICALLY GENERATED -->
-                    </ul>
-                </div>
             </div>
         </section>
         <section class="section-game-board">
@@ -59,15 +63,15 @@
                     <ion-icon class="icon-current-move" name="close-outline"></ion-icon>
                 </header>
                 <div class="div-game-board">
-                    <div class="div-game-square" data-row="0" data-col="0"></div>
-                    <div class="div-game-square" data-row="0" data-col="1"></div>
-                    <div class="div-game-square" data-row="0" data-col="2"></div>
-                    <div class="div-game-square" data-row="1" data-col="0"></div>
-                    <div class="div-game-square" data-row="1" data-col="1"></div>
-                    <div class="div-game-square" data-row="1" data-col="2"></div>
-                    <div class="div-game-square" data-row="2" data-col="0"></div>
-                    <div class="div-game-square" data-row="2" data-col="1"></div>
-                    <div class="div-game-square" data-row="2" data-col="2"></div>
+                    <div class="div-game-square" data-row="0" data-col="0">&nbsp;</div>
+                    <div class="div-game-square" data-row="0" data-col="1">&nbsp;</div>
+                    <div class="div-game-square" data-row="0" data-col="2">&nbsp;</div>
+                    <div class="div-game-square" data-row="1" data-col="0">&nbsp;</div>
+                    <div class="div-game-square" data-row="1" data-col="1">&nbsp;</div>
+                    <div class="div-game-square" data-row="1" data-col="2">&nbsp;</div>
+                    <div class="div-game-square" data-row="2" data-col="0">&nbsp;</div>
+                    <div class="div-game-square" data-row="2" data-col="1">&nbsp;</div>
+                    <div class="div-game-square" data-row="2" data-col="2">&nbsp;</div>
                 </div>
             </div>
         </section>
