Updated site visuals.

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -21,10 +21,75 @@
 
     <!-- TODO: Alter game history. -->
     <div class="div-game-history-popup hide-up">
-        <div class="div-game-history-container">
+        <button class="btn-close-popup">
+            <ion-icon name="chevron-up-outline"></ion-icon>
+        </button>
+        <div class="div-game-history-popup-content">
             <h3>Game History</h3>
             <ul class="score-history-list">
-                <!-- DYNAMICALLY GENERATED -->
+                <li class="score-history-list-item">
+                    <div>
+                        <span>1.</span>
+                        <p>Result</p>
+                    </div>
+                    <p>Date</p>
+                </li>
+                <li class="score-history-list-item">
+                    <div>
+                        <span>1.</span>
+                        <p>Result</p>
+                    </div>
+                    <p>Date</p>
+                </li>
+                <li class="score-history-list-item">
+                    <div>
+                        <span>1.</span>
+                        <p>Result</p>
+                    </div>
+                    <p>Date</p>
+                </li>
+                <li class="score-history-list-item">
+                    <div>
+                        <span>1.</span>
+                        <p>Result</p>
+                    </div>
+                    <p>Date</p>
+                </li>
+                <li class="score-history-list-item">
+                    <div>
+                        <span>1.</span>
+                        <p>Result</p>
+                    </div>
+                    <p>Date</p>
+                </li>
+                <li class="score-history-list-item">
+                    <div>
+                        <span>1.</span>
+                        <p>Result</p>
+                    </div>
+                    <p>Date</p>
+                </li>
+                <li class="score-history-list-item">
+                    <div>
+                        <span>1.</span>
+                        <p>Result</p>
+                    </div>
+                    <p>Date</p>
+                </li>
+                <li class="score-history-list-item">
+                    <div>
+                        <span>1.</span>
+                        <p>Result</p>
+                    </div>
+                    <p>Date</p>
+                </li>
+                <li class="score-history-list-item">
+                    <div>
+                        <span>1.</span>
+                        <p>Result</p>
+                    </div>
+                    <p>Date</p>
+                </li>
             </ul>
         </div>
     </div>
@@ -34,13 +99,18 @@
     <main class="main-container">
         <section class="section-dashboard">
             <header class="dashboard-header">
-                <img src="assets/media/site-logo.png" alt="Logo">
-                <h1>TicTacToe</h1>
+                <div class="div-dashboard-header-logo">
+                    <img src="assets/media/site-logo.png" alt="Logo">
+                    <h1>TicTacToe</h1>
+                </div>
+                <button class="btn-game-history">
+                    <ion-icon name="clipboard-outline"></ion-icon>
+                </button>
             </header>
             <div class="div-leaderboard">
                 <header class="leaderboard-header">
                     <h2>Welcome to TicTacToe!</h2>
-                    <p>Start playing and keep track of the overall history.</p>
+                    <p>Start playing and keep track of your game history.</p>
                 </header>
                 <div class="div-scoreboard-container">
                     <div class="div-score-container">
