Updated game logic.

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -34,62 +34,6 @@
                     </div>
                     <p>Date</p>
                 </li>
-                <li class="score-history-list-item">
-                    <div>
-                        <span>1.</span>
-                        <p>Result</p>
-                    </div>
-                    <p>Date</p>
-                </li>
-                <li class="score-history-list-item">
-                    <div>
-                        <span>1.</span>
-                        <p>Result</p>
-                    </div>
-                    <p>Date</p>
-                </li>
-                <li class="score-history-list-item">
-                    <div>
-                        <span>1.</span>
-                        <p>Result</p>
-                    </div>
-                    <p>Date</p>
-                </li>
-                <li class="score-history-list-item">
-                    <div>
-                        <span>1.</span>
-                        <p>Result</p>
-                    </div>
-                    <p>Date</p>
-                </li>
-                <li class="score-history-list-item">
-                    <div>
-                        <span>1.</span>
-                        <p>Result</p>
-                    </div>
-                    <p>Date</p>
-                </li>
-                <li class="score-history-list-item">
-                    <div>
-                        <span>1.</span>
-                        <p>Result</p>
-                    </div>
-                    <p>Date</p>
-                </li>
-                <li class="score-history-list-item">
-                    <div>
-                        <span>1.</span>
-                        <p>Result</p>
-                    </div>
-                    <p>Date</p>
-                </li>
-                <li class="score-history-list-item">
-                    <div>
-                        <span>1.</span>
-                        <p>Result</p>
-                    </div>
-                    <p>Date</p>
-                </li>
             </ul>
         </div>
     </div>
@@ -133,15 +77,15 @@
                     <ion-icon class="icon-current-move" name="close-outline"></ion-icon>
                 </header>
                 <div class="div-game-board">
-                    <div class="div-game-square" data-row="0" data-col="0">&nbsp;</div>
-                    <div class="div-game-square" data-row="0" data-col="1">&nbsp;</div>
-                    <div class="div-game-square" data-row="0" data-col="2">&nbsp;</div>
-                    <div class="div-game-square" data-row="1" data-col="0">&nbsp;</div>
-                    <div class="div-game-square" data-row="1" data-col="1">&nbsp;</div>
-                    <div class="div-game-square" data-row="1" data-col="2">&nbsp;</div>
-                    <div class="div-game-square" data-row="2" data-col="0">&nbsp;</div>
-                    <div class="div-game-square" data-row="2" data-col="1">&nbsp;</div>
-                    <div class="div-game-square" data-row="2" data-col="2">&nbsp;</div>
+                    <div class="div-game-square" data-row="0" data-col="0"></div>
+                    <div class="div-game-square" data-row="0" data-col="1"></div>
+                    <div class="div-game-square" data-row="0" data-col="2"></div>
+                    <div class="div-game-square" data-row="1" data-col="0"></div>
+                    <div class="div-game-square" data-row="1" data-col="1"></div>
+                    <div class="div-game-square" data-row="1" data-col="2"></div>
+                    <div class="div-game-square" data-row="2" data-col="0"></div>
+                    <div class="div-game-square" data-row="2" data-col="1"></div>
+                    <div class="div-game-square" data-row="2" data-col="2"></div>
                 </div>
             </div>
         </section>
