Updated game logic.

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -27,13 +27,7 @@
         <div class="div-game-history-popup-content">
             <h3>Game History</h3>
             <ul class="score-history-list">
-                <li class="score-history-list-item">
-                    <div>
-                        <span>1.</span>
-                        <p>Result</p>
-                    </div>
-                    <p>Date</p>
-                </li>
+                <!-- DYNAMICALLY GENERATED -->
             </ul>
         </div>
     </div>
