Added localStorage reset button.

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -41,9 +41,20 @@
                     <img src="assets/media/site-logo.png" alt="Logo">
                     <h1>TicTacToe</h1>
                 </div>
-                <button class="btn-game-history">
-                    <ion-icon name="clipboard-outline"></ion-icon>
-                </button>
+                <nav class="dashboard-nav">
+                    <ul class="dashboard-nav-list">
+                        <li class="dashboard-nav-list-item">
+                            <button class="btn-game-history">
+                                <ion-icon name="clipboard-outline"></ion-icon>
+                            </button>
+                        </li>
+                        <li class="dashboard-nav-list-item">
+                            <button class="btn-reset-storage">
+                                <ion-icon name="refresh-outline"></ion-icon>
+                            </button>
+                        </li>
+                    </ul>
+                </nav>
             </header>
             <div class="div-leaderboard">
                 <header class="leaderboard-header">
