Added tie game logic.

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -14,12 +14,11 @@
 <body>
     <div class="div-confirmation-popup hide-up">
         <div class="div-confirmation-popup-content">
-            <h2>Player <ion-icon class="icon-confirmation" name="close-outline"></ion-icon> Wins!</h2>
+            <h2 class="confirmation-popup-heading">{}</h2>
             <button class="btn-new-game">New Game</button>
         </div>
     </div>
 
-    <!-- TODO: Alter game history. -->
     <div class="div-game-history-popup hide-up">
         <button class="btn-close-popup">
             <ion-icon name="chevron-up-outline"></ion-icon>
