Updated game history popup.

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -24,7 +24,12 @@
             <ion-icon name="chevron-up-outline"></ion-icon>
         </button>
         <div class="div-game-history-popup-content">
-            <h3>Game History</h3>
+            <header class="game-history-popup-content-header">
+                <h3>Game History</h3>
+                <div class="div-pagination-btns-container">
+
+                </div>
+            </header>
             <ul class="score-history-list">
                 <!-- DYNAMICALLY GENERATED -->
             </ul>
