Updated game history header.

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -19,7 +19,7 @@
         </div>
     </div>
 
-    <div class="div-game-history-popup hide-up">
+    <div class="div-game-history-popup">
         <button class="btn-close-popup">
             <ion-icon name="chevron-up-outline"></ion-icon>
         </button>
@@ -27,7 +27,12 @@
             <header class="game-history-popup-content-header">
                 <h3>Game History</h3>
                 <div class="div-pagination-btns-container">
-
+                    <button class="btn-pagination">
+                        <ion-icon name="chevron-back-outline"></ion-icon>
+                    </button>
+                    <button class="btn-pagination">
+                        <ion-icon name="chevron-forward-outline"></ion-icon>
+                    </button>
                 </div>
             </header>
             <ul class="score-history-list">
@@ -36,7 +41,7 @@
         </div>
     </div>
 
-    <div class="div-popup-overlay hide-down">&nbsp;</div>
+    <div class="div-popup-overlay">&nbsp;</div>
 
     <main class="main-container">
         <section class="section-dashboard">
