Updated game history header.

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -27,10 +27,10 @@
             <header class="game-history-popup-content-header">
                 <h3>Game History</h3>
                 <div class="div-pagination-btns-container">
-                    <button class="btn-pagination">
+                    <button class="btn-pagination btn-backward">
                         <ion-icon name="chevron-back-outline"></ion-icon>
                     </button>
-                    <button class="btn-pagination">
+                    <button class="btn-pagination btn-forward">
                         <ion-icon name="chevron-forward-outline"></ion-icon>
                     </button>
                 </div>
