Updated game history functionality.

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -38,6 +38,9 @@
             <ul class="score-history-list">
                 <!-- DYNAMICALLY GENERATED -->
             </ul>
+            <div class="div-pagination-counter-container">
+                <span class="span-curr-page">&nbsp;</span> to <span class="span-last-page">&nbsp;</span>
+            </div>
         </div>
     </div>
 
