Updated game history.

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -19,7 +19,7 @@
         </div>
     </div>
 
-    <div class="div-game-history-popup">
+    <div class="div-game-history-popup hide-up">
         <button class="btn-close-popup">
             <ion-icon name="chevron-up-outline"></ion-icon>
         </button>
@@ -44,7 +44,7 @@
         </div>
     </div>
 
-    <div class="div-popup-overlay">&nbsp;</div>
+    <div class="div-popup-overlay hide-down">&nbsp;</div>
 
     <main class="main-container">
         <section class="section-dashboard">
