Updated game history list.

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -39,7 +39,7 @@
                 <!-- DYNAMICALLY GENERATED -->
             </ul>
             <div class="div-pagination-counter-container">
-                <span class="span-curr-page">&nbsp;</span> to <span class="span-last-page">&nbsp;</span>
+                <span class="span-curr-page">0</span> to <span class="span-last-page">0</span>
             </div>
         </div>
     </div>
