Updated project files.

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="assets/media/site-icon.ico">
     <link rel="stylesheet" href="assets/css/style.css">
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js" defer></script>
-    <script src="assets/js/controller.js" defer></script>
+    <script type="module" src="assets/js/controller.js" defer></script>
     <title>WebDev | TicTacToe</title>
 </head>
 
