Updated game history logic.

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -35,7 +35,7 @@
                     </button>
                 </div>
             </header>
-            <div class="div-score-history-list-container empty-list">
+            <div class="div-score-history-list-container empty-container">
                 <div class="div-empty-list-message">
                     <p>The game history is currently empty.</p>
                 </div>
@@ -44,7 +44,7 @@
                 </ul>
             </div>
             <div class="div-pagination-counter-container">
-                <span class="span-curr-page">0</span> to <span class="span-last-page">0</span>
+                <span class="span-curr-page">0</span> of <span class="span-last-page">0</span>
             </div>
         </div>
     </div>
