Updated game board container.

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -93,6 +93,9 @@
             </div>
         </section>
         <section class="section-game-board">
+            <div class="div-game-btn-container">
+                <button class="btn-start-game">Start Game</button>
+            </div>
             <div class="div-game-board-container">
                 <header class="game-board-header">
                     <p>Current Move:</p>
