Updated game board view.

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js" defer></script>
     <script type="module" src="assets/js/controller.js" defer></script>
-    <title>WebDev | TicTacToe</title>
+    <title>WebDev | Crossroad Clash</title>
 </head>
 
 <body class="page-body">
@@ -56,7 +56,7 @@
             <header class="dashboard-header">
                 <div class="div-dashboard-header-logo">
                     <img src="assets/media/site-logo.png" alt="Logo">
-                    <h1>TicTacToe</h1>
+                    <h1>CrossRoadClash</h1>
                 </div>
                 <nav class="dashboard-nav">
                     <ul class="dashboard-nav-list">
@@ -75,7 +75,7 @@
             </header>
             <div class="div-leaderboard">
                 <header class="leaderboard-header">
-                    <h2>Welcome to TicTacToe!</h2>
+                    <h2>Welcome to CrossRoadClash!</h2>
                     <p>Start playing and keep track of your game history.</p>
                 </header>
                 <div class="div-scoreboard-container">
@@ -96,7 +96,7 @@
             <div class="div-game-btn-container">
                 <button class="btn-start-game">Start Game</button>
             </div>
-            <div class="div-game-board-container">
+            <div class="div-game-board-container hide-right">
                 <header class="game-board-header">
                     <p>Current Move:</p>
                     <ion-icon class="icon-current-move" name="close-outline"></ion-icon>
