--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="assets/media/site-icon.ico">
     <link rel="stylesheet" href="assets/css/style.css">
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js" defer></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/ionicons@7.4.0/dist/ionicons/ionicons.esm.js"></script>
     <script type="module" src="assets/js/controller.js" defer></script>
     <title>WebDev | Crossroad Clash</title>
 </head>
